<resources>

    <string name="app_name">TaskMasterApp</string>
    <string name="my_tasks">GO TO SETTINGS ADD YOUR NAME</string>
    <string name="add_task">Add Task</string>
    <string name="add_task_layout">add task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="todo">todo</string>
    <string name="all_tasks_Btn">ALL Tasks</string>
    <string name="add_your_text">add your text</string>
    <string name="submit">Submit</string>
    <string name="title_activity_task_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_task">First Task</string>
    <string name="second_task">Second Task</string>
    <string name="third_task">Third Task</string>
    <string name="task_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="settingbtn">settingBtn</string>
    <string name="settings">Settings</string>
    <string name="add_your_name_below">Add Your Name Below</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="taskimgview">TaskImgView</string>
    <string name="task_title">Task Title</string>
    <string name="task_status">Task Status</string>
    <string name="divider">ـــــــــــــــــــــــــــــــــــــــــــــ</string>
    <string name="total">total</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description</string>
    <string name="add_status">Add Status</string>
    <string name="status">In Progress </string>
    <string name="hardStatus">Status :</string>
    <string name="team_name">Team Name</string>
    <string name="team_view">Team</string>
    <string name="account">Account</string>
    <string name="upload">UPLOAD</string>
    <string name="task_details_fileBath">File Bath</string>
    <string name="file_path">File Path</string>
    <string name="clear_form">Clear Form</string>


    <string-array name="team_spinner_array">
        <item>Manager</item>
        <item>Employer</item>
        <item>Owner</item>
    </string-array>

</resources>