<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:background="@color/cardview_shadow_end_color"
        tools:ignore="UselessParent">

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/taskImg"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:layout_marginStart="20dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            app:cardCornerRadius="60dp" />-->

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/taskimgview"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/imgView"
            android:text="@string/task_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/taskStatus"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/taskTitle"
            android:text="@string/task_status"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskDes"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/imgView"
            android:text="@string/task_description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dividerLine"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_toEndOf="@id/imgView"
            android:text="@string/divider"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </RelativeLayout>



</RelativeLayout>